--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,10 @@
 #root {
   max-width: 1280px;
   margin: 0 auto;
-  padding: 0.5rem;
+  padding: 1rem;
   text-align: center;
   align-items: center;
   display: flex;
+  justify-content: center;
  
 }
